--- a/Lab12/app/index.html
+++ b/Lab12/app/index.html
@@ -1,26 +1,19 @@
-<!--
-   HTML Form for entering data
-   Author: Daniel Ermer
--->
-
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>Homework 3</title>
-        <script src="part1.js" /></script>
+	<meta charset="utf-8">
+	<title>React Tutorial</title>
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-        <link rel="stylesheet" href="part1Style.css" />
+	<link rel="stylesheet" href="css/base.css" />
         <script src="//code.jquery.com/jquery-latest.js"></script>
         <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
         <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
-        <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
         <script src="https://unpkg.com/jquery@3.1.0/dist/jquery.min.js"></script>
         <script src="https://unpkg.com/remarkable@1.7.1/dist/remarkable.min.js"></script>
     </head>
     <body>
-        <div id="content"></div>
-        <script type="text/babel" src="script.js"></script>
+	<div id="content"></div>
+        <script type="text/javascript" src="bundle.js"></script>
     </body>
 </html>
