--- a/Homework3/public/part1.html
+++ b/Homework3/public/part1.html
@@ -21,6 +21,6 @@
     </head>
     <body>
         <div id="content"></div>
-        <script type="text/babel" src="script.js"></script>
+        <script type="text/babel" src="index.js"></script>
     </body>
 </html>
